--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -1,4 +1,5 @@
-<html>
-    <header><title>Housing Analytics</title></header>
-    <body><h1>Welcome to Housing Analytics Data Dashboard!</h1></body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Welcome to Housing Analytics!</h1>
+{% endblock %}
