--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -9,6 +9,18 @@
       <title>Housing Analytics</title>
       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+      <!-- Chart CSS -->
+      <!-- semantic UI -->
+      <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
+      <!--Chart js-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous" />
+      <!-- jQuery -->
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+
+
     </head>
 
     <body>
@@ -21,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="authorized">Link <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="chart">Chart <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="map">Map <span class="sr-only">(current)</span></a>
@@ -34,6 +46,9 @@
           </form>
         </div>
       </nav>
+
+      {% block scripts %}
+      {% endblock scripts %}
    
       <div class="my-5 text-center container"> 
         {% block content %}
