--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <form class="form">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
 
   <div class="container">
       <div class="row mt-4">
-          <div class="col-md-10 offset-md-1">
+        <div class="col-md-10 offset-md-1">
             {{ m|safe }}
         </div>
     </div>
