--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -1,60 +1,28 @@
 {% extends "base.html" %}
 
+
 {% block content %}
     <html>
         <head>
             <title>Housing Homepage</title>
             {% load static %}
-            <link rel="stylesheet" href="{% static 'css/home.css' %}">
-
+            <link rel="stylesheet" type ="text/css" href="{% static 'css/home.css' %}"/>
+         
         </head>
+            
+        <div class ="home-body">
 
-        
-        <div class="homeclass">
-        
-            <h1>Welcome to Housing Analytics!</h1>
+            <div class="welcome-text">
+            
+                <h1>Welcome to Housing Analytics!</h1>
 
-            <p style= color:black; background-color:white; border: white 5px solid> 
-            Housing Analytics is a data management system and data visualisation web application that allows for greater insights into the housing market in Australia. </p>
+                <p> Housing Analytics is a data management system and data visualisation web application that allows for greater insights into the housing market in Australia. </p>            
+            </div>
 
-            <h1>Monthly Home Index Values</h1>
-            
-            <table>
-            <tr>
-                <th>City</th>
-                <th>Houses</th>
-            
-            </tr>
-            <tr>
-                <td>Sydney</td>
-                <td>230</td>
-            
-            </tr>
-            <tr>
-                <td>Melbourne</td>
-                <td>187.6</td>
-            
-            </tr>
-            <tr>
-                <td>Brisbane </td>
-                <td>172</td>
-            
-            </tr>
-            <tr>
-                <td>Adelaide</td>
-                <td>168.1</td>
-            
-            </tr>
-            <tr>
-                <td>Perth</td>
-                <td>112</td>
-            
-            </tr>
+            <figure class="house">
+                <img src = "{% static 'images/houses.jpg' %}"  alt="House" width= 1200px height= 600px>
+            </figure>
 
-            </table>
-            
-            
-            
             <br>
             <br>
             <br>
@@ -73,14 +41,14 @@
             <br>
             <br>
             <br>
-      
+    
             
-                      
+                    
             <p style ="text-align: center">© HOUSING ANALYTICS</p>
             
             </div>
-                
-            
+        
+        </div>            
         
     
 {% endblock %}
