--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,23 +1,24 @@
-
-table {
-font-family: arial, sans-serif;
-border-collapse: collapse;
-width: 30%;
+.home-body{
+    font-family: 'Lato', sans-serif;
+    /* background-color: darkslateblue;   */
+    width: 100%;
+    position: center;
 }
 
-td, th {
-border: 1px solid #dddddd;
-text-align: left;
-padding: 8px;
+.welcome-text{
+    color: purple;
+    text-align: center;
 }
-
-tr:nth-child(even) {
-background-color: #dddddd;
+.welcome-text h1{
+    color: orange;
+    font-size: 60px;
 }
-
-.homeclass { 
-    font-family: Arial;
-    text-align: left;
+.welcome-text p{
+    color: orange;
     font-size: 20px;
-    margin-left: 150px;
 }
+
+.house{
+    position: center;
+}
+
