Added Contact Us Page
Added new Page

--- a/charts/templates/charts/chart.html
+++ b/charts/templates/charts/chart.html
@@ -258,4 +258,14 @@
 
     <h1>NSW House Prices</h1>
     <canvas id="lineChart" width="200" height="100"></canvas>
+    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    
+       
+    <p style ="text-align: center">© HOUSING ANALYTICS</p>
 {% endblock content %}
