--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -13,4 +13,15 @@
         </div>
     </div>
   </div>
+
+  
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  
+     
+  <p style ="text-align: center">© HOUSING ANALYTICS</p>
 {% endblock %}
