--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,6 @@
 .home-body{
     font-family: 'Lato', sans-serif;
-    /* background-color: darkslateblue;   */
+    /* background-color: darkslateblue;    */
     width: 100%;
     position: center;
 }
@@ -18,7 +18,26 @@
     font-size: 20px;
 }
 
-.house{
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 30%;
     position: center;
+    }
+    
+td, th {
+border: 1px solid #dddddd;
+text-align: center;
+padding: 8px;
+}
+
+tr:nth-child(even) {
+background-color: #dddddd;
+}
+
+.center{
+    margin-left: auto;
+    margin-right: auto;
 }
 
