--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,11 +6,10 @@ h1{
     color:orange;
 }
 
-body {
-    color: blue;
-    background-color: powderblue;
-  }
-
 .header-container-wrapper {
 	background-color: red;
 }   
+
+body{
+    background-color: grey;
+}
