--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
       <title>Housing Analytics</title>
+      <!-- OFFLINE CSS-->
       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
@@ -31,11 +32,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="chart">Residential Property<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href={% url 'charts' %}>Residential Property<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href={% url 'map' %}>Map <span class="sr-only">(current)</span></a>
-              </li>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href={% url 'contact' %}>Contact Us<span class="sr-only">(current)</span></a>
+            </li>
             
           </ul>
 
