--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <form class="form">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  <form class="form" method="post">
+    {% csrf_token %}
+    <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </form>
 
