--- a/charts/templates/charts/chart.html
+++ b/charts/templates/charts/chart.html
@@ -154,6 +154,24 @@
      });
     //------------------
 
+    //New Bar Chart horizontal
+    const ctx8 = document.getElementById('radar').getContext('2d');
+            const radar= new Chart(ctx8, 
+            {
+            type: 'radar',
+            data: 
+            {
+                labels: ['Sydney', 'Melbourne', 'Brisbane', 'Adelaide', 'Perth', 'Hobart', 'Darwin','Canberra','Average'],
+                datasets: [{
+                    label: 'Residential property prices, weighted average changed',
+                    data: [4.1, 3.9, 9.6, 6.8, 2.9, 6.5, 1.5, 6.4, 4.7],
+    
+                }]
+            },
+        
+            }); 
+        //------------------
+
     
     //New Line & Bar Chart 
     const ctx5 = document.getElementById('bothChart').getContext('2d');
@@ -228,6 +246,8 @@
 
     });
 
+
+
 </script>
 
 {% endblock scripts %}
@@ -258,6 +278,9 @@
 
     <h1>NSW House Prices</h1>
     <canvas id="lineChart" width="200" height="100"></canvas>
+
+    <h1>NSW HRADARs</h1>
+    <canvas id="radar" width="200" height="100"></canvas>
     
     <br>
     <br>
