--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -32,31 +32,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-
-
               <a class="nav-link" href={% url 'charts' %}>Residential Property<span class="sr-only">(current)</span></a>
             </li>
+
             <li class="nav-item active">
                 <a class="nav-link" href={% url 'map' %}>Map <span class="sr-only">(current)</span></a>
             </li>
+
             <li class="nav-item active">
               <a class="nav-link" href={% url 'contact' %}>Contact Us<span class="sr-only">(current)</span></a>
             </li>
             
-          </ul>
-
-          
-          <div id="navbar" class="navbar-collapse collapse"> 
-
             {% if user.is_authenticated %}
-            <ul class="nav-area">
-                <li>User: {{ user.get_username }}</li>
+              <li class="login-item">
+                >User: {{ user.get_username }}
+              </li>
                 <a class="nav-link" href={% url 'login' %}>Logout<span class="sr-only">(current)</span></a>  
-            </ul>
-        
+     
             {% else %}
-            <ul class="nav-area">
-              <a class="nav-link" href={% url 'login' %}>Login<span class="sr-only">(current)</span></a>
+              <li class="login-item">
+                <a class="nav-link" href={% url 'login' %}>Login<span class="sr-only">(current)</span></a>
+              </li>
             </ul>
   
        
