--- a/home/templates/home/accounts/register.html
+++ b/home/templates/home/accounts/register.html
@@ -15,13 +15,13 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #7abecc !important;
+			background: #b1e0e9 !important;
 		}
 		.user_card {
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-			background: #74cfbf;
+      background: #b483e8;
 			position: relative;
 			display: flex;
 			justify-content: center;
