--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -14,11 +14,13 @@
         <h1>About Us</h1>
 
     
-        <p> 
-        HA is a new innovative web application that allow users to be able to view Housing Analytics in real time.</p>
         <p>
+        A Platform which connects industry and communities to the best available data, analytics and insights to assist in solving the challenges facing Australia’s housing future.
+        </p>
+
         Create an account today to be able to access special features.
         </p>
+    
         <h2>Contact Details</h2>
         
         <p>Telephone: 1800 548 797</p>
@@ -36,17 +38,17 @@
           </tr>
           <tr>
             <td>Sunday</td>
-            <td>9:00am - 3:00pm</td>
+            <td>Closed</td>
         
           </tr>
           <tr>
             <td>Monday</td>
-            <td>6:00am - 5:00pm</td>
+            <td>6:00am - 1:00pm</td>
         
           </tr>
           <tr>
             <td>Tuesday</td>
-            <td>6:00am - 5:00pm</td>
+            <td>6:00am - 3:00pm</td>
         
           </tr>
           <tr>
@@ -56,18 +58,18 @@
           </tr>
           <tr>
             <td>Thursday</td>
-            <td>6:00am - 3:00pm</td>
+            <td>6:00am - 7:00am</td>
         
           </tr>
           <tr>
             <td>Friday</td>
-            <td>6:00am - 4:00pm</td>
+            <td>6:00am - 6:30am</td>
         
           </tr>
            </tr>
           <tr>
             <td>Saturday</td>
-            <td>9:00am - 3:00pm</td>
+            <td>Closed</td>
         
           </tr>
         </table>
