--- a/home/templates/home/accounts/register.html
+++ b/home/templates/home/accounts/register.html
@@ -15,7 +15,7 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #b1e0e9 !important;
+			background: #f1f1f1 !important;
 		}
 		.user_card {
 			width: 350px;
