--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -27,7 +27,7 @@
       <style>
         body,
         html {
-          background: #e4faff !important;
+          background: #f1f1f1 !important;
         }
       </style>
 
