Update images and login
updated menu bar

--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -15,16 +15,22 @@
 
     
         <p>
-        A Platform which connects industry and communities to the best available data, analytics and insights to assist in solving the challenges facing Australia’s housing future.
-        </p>
+        A web application tht aims to connects industry and communities to the best available data, analytics and insights to assist in solving the challenges facing Australia’s housing future.
+       
 
-        Create an account today to be able to access special features.
-        </p>
+        <figure style = "margin-left:auto; margin-right:auto">
+          <img src = "{% static 'images/home_page.png' %}"  alt="House" width= 1200px height= 400px>
+        </figure>
+
     
         <h2>Contact Details</h2>
         
         <p>Telephone: 1800 548 797</p>
         <p>Email: <a href="">HA@studiomanagement.com.au</a>
+
+        <br>
+        <br>
+        <br>
         
     
         
@@ -73,7 +79,21 @@
         
           </tr>
         </table>
+
+    
         
+        <br>
+
+
+
+        </p>
+        Login to be able to access special features.
+        </p>
+				<div class="d-flex justify-content-center links">
+						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+				</div>
+  
+          
         
         
         <br>
