--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -19,9 +19,11 @@
 
                 <p> Housing Analytics is a data management system and data visualisation web application that allows for greater insights into the housing market in Australia. </p>            
             </div>
+            
+            <br>
 
             <figure style = "margin-left:auto; margin-right:auto">
-                <img src = "{% static 'images/houses.jpg' %}"  alt="House" width= 1200px height= 750px>
+                <img src = "{% static 'images/homes2.jpg' %}"  alt="House" width= 800px height= 450px>
             </figure>
 
             <br>
