commit new branch

--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -30,6 +30,35 @@
         </form>
       </div>
   </div>
+  <div class="container">
+    <div style="display:inline-block; vertical-align:top; width:700">
+        
+    </div>
+
+    <div style="display:inline-block; float:right">
+        <form class="form" method="post">
+            {% csrf_token %}
+
+            <div style="display:inline-block; margin-bottom:10px;">
+                <input class="form-control mr-sm-2" type="search" name="suburb" placeholder="Suburb" aria-label="Search">
+            </div><br>
+
+            <div style="display:inline-block; margin-bottom:10px;">
+                <input class="form-control mr-sm-2" type="search" name="bedrooms" placeholder="Bedrooms" aria-label="Search">
+            </div><br>
+
+            <div style="display:inline-block; margin-bottom:10px;">
+                <input class="form-control mr-sm-2" type="search" name="bathrooms" placeholder="Bathrooms" aria-label="Search">
+            </div><br>
+
+            <div style="display:inline-block; margin-bottom:10px;">
+                <input class="form-control mr-sm-2" type="search" name="cars" placeholder="Cars" aria-label="Search">
+            </div><br>
+            <br>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+</div>
 
   <br>
   <br>
