--- a/home/templates/home/accounts/register.html
+++ b/home/templates/home/accounts/register.html
@@ -21,7 +21,7 @@
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-      background: #b483e8;
+			background: #c9b1e6;
 			position: relative;
 			display: flex;
 			justify-content: center;
