--- a/home/templates/home/welcome.html
+++ b/home/templates/home/welcome.html
@@ -13,7 +13,7 @@
             
         <div class ="home-body">
 
-            <div class="welcome-text">
+            <div class="welcome-class">
             
                 <h1>Welcome to Housing Analytics!</h1>
 
@@ -29,14 +29,12 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+
 
             <div style = "position: center">
-                <h2><a href="{% url 'contact' %}">Contact Us</a></h2>
+                <div class="contact-class"></div>
+                    <h4><a href="{% url 'contact' %}">Contact Us</a></h4>
+                </div>
                
                 <br>
                 <br>
