--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,8 @@
-.note-li {
-    color: red;
-}
-
 h1{
-    color:orange;
+    color:  rgb(0, 41, 62);
 }
-
-.header-container-wrapper {
-	background-color: red;
-}   
 
 
 .login-item {
-    color: blue;
+    color: rgb(36, 175, 255);
 }
