--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -40,7 +40,13 @@
 
         /* Add a color to the active/current link */
         .topnav a.active {
-          color: blue;
+          color: rgb(36, 36, 36);
+          display: block;
+          padding: 10px 18px;
+          background-color: #dddddd;
+    
+        
+
         }
 
         /* Right-aligned section inside the top navigation */
