--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -1,6 +1,46 @@
 {% extends "base.html" %}
 
+{% for message in messages %}
+<div class="alert {{ message.tags }} alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    {{ message | safe }}
+</div>
+{% endfor %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function()
+    {
+
+        //Dwelling stock
+        const ctx7 = document.getElementById('lineStock').getContext('2d');
+        const lineStock = new Chart
+        (ctx7,
+        {
+        type: 'line',
+        data:
+        {
+            labels: {{ labels }},
+            datasets: [{
+                label: 'Total value of dwelling stock ($m)',
+                data: {{ data }},
+                fill: false,
+                borderColor: 'rgb(75,192,192)',
+                tension: 0.1
+            }]
+        }
+        });
+    });
+</script>
+{% endblock scripts %}
+
+
 {% block content %}
+  <h1> {{ suburb }} Properties for Sale</h1>
+  <br>
+  <b>{{ map_error_message|safe }}</b>
   <div class="container">
       <div style="display:inline-block; vertical-align:top; width:700">
           {{ m|safe }}
@@ -9,9 +49,14 @@
       <div style="display:inline-block; float:right">
           <form class="form" method="post">
               {% csrf_token %}
+              <p>Please fill in all the search criteria below:</p>
 
               <div style="display:inline-block; margin-bottom:10px;">
                   <input class="form-control mr-sm-2" type="search" name="suburb" placeholder="Suburb" aria-label="Search">
+              </div><br>
+
+              <div style="display:inline-block; margin-bottom:10px;">
+                  <input class="form-control mr-sm-2" type="search" name="postcode" placeholder="Postcode" aria-label="Search">
               </div><br>
 
               <div style="display:inline-block; margin-bottom:10px;">
@@ -30,38 +75,18 @@
         </form>
       </div>
   </div>
-  <div class="container">
-    <div style="display:inline-block; vertical-align:top; width:700">
-        
-    </div>
 
-    <div style="display:inline-block; float:right">
-        <form class="form" method="post">
-            {% csrf_token %}
+  <br>
+  <br>
+  <br>
 
-            <div style="display:inline-block; margin-bottom:10px;">
-                <input class="form-control mr-sm-2" type="search" name="suburb" placeholder="Suburb" aria-label="Search">
-            </div><br>
-
-            <div style="display:inline-block; margin-bottom:10px;">
-                <input class="form-control mr-sm-2" type="search" name="bedrooms" placeholder="Bedrooms" aria-label="Search">
-            </div><br>
-
-            <div style="display:inline-block; margin-bottom:10px;">
-                <input class="form-control mr-sm-2" type="search" name="bathrooms" placeholder="Bathrooms" aria-label="Search">
-            </div><br>
-
-            <div style="display:inline-block; margin-bottom:10px;">
-                <input class="form-control mr-sm-2" type="search" name="cars" placeholder="Cars" aria-label="Search">
-            </div><br>
-            <br>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-</div>
+    <h1> {{ suburb }} Sale Trend Over 10 Years</h1>
+    <b>{{ graph_error_message|safe }}</b>
+    <canvas id="lineStock" width="100" height="30"></canvas>
 
   <br>
   <br>
 
-  <p style ="text-align: center">© HOUSING ANALYTICS</p>
+    <p style ="text-align: center">© HOUSING ANALYTICS</p>
+
 {% endblock %}
